# Charm

./: .gitignore  ARCHITECTURE.md  AUTH_HOLD_001_FINAL_AUDIT.md  CHANGELOG_AI.md  COMMENT_CHANGES.md  CONFIG_TRANSPORT_CONTRACT.md  CURRENT_TASK.md  DECISIONS.md  DOCUMENTATION_AUDIT.md  FINAL_PRODUCTION_HANDOFF_REL002.md  FINAL_PRODUCTION_READINESS_REPORT.md  FLASHING_UX.md  HARDWARE_VALIDATION_PACK.md  IMPLEMENTATION_GAPS.md  IMPLEMENTATION_SLICES.md  INTERFACES.md  MANUAL_ACCEPTANCE_MATRIX.md  MEMORY.md  OPERATIONS_RUNBOOKS.md  PREPROD_AUDIT_REL001.md  PRODUCTION_CLOSEOUT_STATUS.md  PRODUCTION_VERTICAL_SLICES.md  README.md  RELEASE_GATE_CLOSURE_VS08.md  RELEASE_ROLLBACK.md  TODO.md  TROUBLESHOOTING.md  VALIDATION.md  VS_01_RUNTIME_DATA_PLANE_READINESS.md  WEBAPP_PLAN.md  WEBAPP_VALIDATION.md  WEB_RELEASES.md
.github/workflows/: ci.yml  firmware_build.yml  release.yml  web_runtime_deploy.yml
components/charm_app/: CMakeLists.txt
components/charm_app/include/charm/app/: runtime_data_plane.hpp  startup_storage_lifecycle.hpp
components/charm_app/src/: app_bootstrap.cpp  config_transport_runtime_adapter.cpp  runtime_data_plane.cpp
components/charm_contracts/include/charm/contracts/: identity_types.hpp  registry_types.hpp
components/charm_core/: CMakeLists.txt
components/charm_core/include/charm/core/: decode_plan.hpp  device_registry.hpp  hid_decoder.hpp  hid_semantic_model.hpp  logical_state.hpp  mapping_bundle.hpp  mapping_engine.hpp  profile_manager.hpp  supervisor.hpp
components/charm_core/src/: device_registry.cpp  hid_decoder.cpp  hid_semantic_model.cpp  logical_state.cpp  mapping_bundle.cpp  mapping_engine.cpp  profile_generic_gamepad_encoder.cpp  profile_manager.cpp  supervisor.cpp
components/charm_platform_ble/: CMakeLists.txt
components/charm_platform_ble/include/charm/platform/: ble_transport_adapter.hpp
components/charm_platform_ble/src/: ble_transport_adapter.cpp
components/charm_platform_storage/src/: config_store_nvs.cpp
components/charm_platform_usb/: CMakeLists.txt
components/charm_platform_usb/include/charm/platform/: usb_host_adapter.hpp
components/charm_platform_usb/src/: usb_host_adapter.cpp
components/charm_ports/include/charm/ports/: usb_host_port.hpp
components/charm_test_support/include/: nvs.h  nvs_flash.h
components/charm_test_support/include/charm/test_support/: fake_config_store_port.hpp
components/charm_test_support/src/: nvs_mock.cpp
main/: CMakeLists.txt  main.cpp
scripts/: package_web_runtime.sh
tests/unit/: CMakeLists.txt  test_ble_transport_adapter.cpp  test_config_transport_runtime_adapter.cpp  test_hid_decoder.cpp  test_mapping_bundle.cpp  test_mapping_engine.cpp  test_profile_generic_gamepad_encoder.cpp  test_profile_manager.cpp  test_runtime_data_plane.cpp  test_usb_host_adapter.cpp
web/: QA_AUTOMATION.md  index.html  package-lock.json  package.json  playwright.config.js  style.css  styles.css
web-next/: index.html
web-next/src/: artifacts.js  capabilities.js  configDraft.js  flasher.js  main.js  monitor.js
web/src/: artifacts.js  capabilities.js  firmware.js  flasher.js  github.js  main.js  md5.js  monitor.js  serialOwnership.js
web/tests/: smoke.spec.js
